# YetAnotherHealthyApp

./: .editorconfig  .gitattributes  .gitignore  .nvmrc  .pre-commit-config.yaml  .python-version  GET_STARTED_WITH_TESTING.md  Makefile  README.md  dania_20_z_makro_mikro.csv  docker-compose.yml  high-level-project-description.md  project_description.md
.ai/: 3x3implementation.md  analysis-run-plan.md  api-plan.md  auth-refactor-summary.md  auth-spec.md  auth-ui-implementation-summary.md  backend-auth.md  db-plan.md  docker.mdc  email-confirmation-update.md  endpoint-planning.md  frontend-auth-implementation-complete.md  frontend-auth.md  openrouter-service-implementation-plan.md  prd.md  refactor-plan.md  render_deployment.md  tech-stack.md  test-plan.md  ui-plan.md  ui-redesign-summary.md  ui-session-plan.md  view-implementation-plan.md
.ai/endpoints/: analysis-implementation-plan-2.md  analysis-implementation-plan-6.md  meals-implementation-plan_0.md  meals-implementation-plan_1.md  meals-implementation-plan_3.md  profile-implementation-plan_1_done.md  reports-implementation-plan.md
.ai/endpoints_backend/: analysis-implementation-plan-1.md  analysis-implementation-plan-3.md  analysis-implementation-plan-4.md  analysis-implementation-plan-5.md  meal-categories-implementation-plan_done.md  meals-implementation-plan_2.md  meals-implementation-plan_4.md  products-implementation-plan.md  profile-implementation-plan_2_done.md  profile-implementation-plan_done.md  units-implementation-plan.md
.ai/frontend_views/: authentication-view-implementation-plan.md  dodawanie-edycja-posilku-view-implementation-plan.md  historia-view-implementation-plan.md  onboarding-view-implementation-plan.md  panel-glowny-view-implementation-plan.md  profil-view-implementation-plan.md  szczegoly-posilku-view-implementation-plan.md
.ai/testy/: backend-unit-test-implementation-summary.md  (+2 more)
api/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
api/app/: main.py
api/app/api/routers/: __init__.py  foods.py  log.py  match.py  parse.py  summary.py
api/app/clients/: supabase.py
api/app/core/: exceptions.py  logging.py  settings.py
api/app/models/: __init__.py  foods.py  log.py  match.py  parse.py  summary.py
api/app/repositories/: meals.py
api/app/scripts/: export_openapi.py
api/app/services/: calculator.py  llm.py  normalization.py  retrieval.py
api/prompts/: clarify_v1.txt  parse_v1.txt
api/tests/: conftest.py  test_contracts.py  test_main.py
api/tests/llm_golden/: .gitkeep
apps/: README.md
apps/backend/: .gitignore  Dockerfile  README_DOCKER.md  README_ENV.md  docker-build.sh  docker-run.sh  main.py  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: __init__.py  api.py  pagination.py
apps/backend/app/api/v1/endpoints/: __init__.py  analysis_runs.py  auth.py  health.py  meal_categories.py  meals.py  products.py  profile.py  reports.py  units.py
apps/backend/app/api/v1/schemas/: __init__.py  analysis_runs.py  meal_categories.py  meals.py  products.py  reports.py  units.py
apps/backend/app/core/: config.py  dependencies.py  supabase.py
apps/backend/app/db/: session.py
apps/backend/app/db/repositories/: __init__.py  analysis_run_items_repository.py  analysis_runs_repository.py  meal_categories_repository.py  meal_repository.py  product_repository.py  profile_repository.py  reports_repository.py  unit_repository.py
apps/backend/app/schemas/: __init__.py  auth.py  openrouter.py  profile.py
apps/backend/app/services/: __init__.py  analysis_processor.py  analysis_runs_service.py  meal_categories_service.py  meal_service.py  openrouter_client.py  openrouter_service.py  product_service.py  profile_service.py  reports_service.py  units_service.py
apps/backend/scripts/: create_env.py  evaluate_analysis_model.py  test_config.py
apps/backend/tests/: README.md  conftest.py
apps/backend/tests/integration/: test_example_api.py
apps/backend/tests/unit/: conftest.py  test_example_service.py
apps/backend/tests/unit/api_schemas/: test_meals_schema_and_cursors.py  test_pagination_pageinfo.py
apps/backend/tests/unit/core/: test_dependencies_auth.py
apps/backend/tests/unit/services/: test_analysis_processor.py  test_analysis_runs_service.py  test_meal_service.py  test_openrouter_service.py  test_reports_service.py
docs/: .gitkeep  openapi.json
evaluation/: dataset.dev.jsonl  run_eval.py
frontend/: Dockerfile  jest.config.cjs  package-lock.json  package.json  tsconfig.json
ingestion/: .gitkeep
ops/: ci.yml
scripts/: extract_usda_csv_macros.py  extract_usda_macros.py  import_usda_products.py  search_usda_foods.py
tasks/: 01a-contracts-openapi-backend.md  01b-openapi-codegen-frontend.md  02-llm-orchestration-hardening.md  03-tooling-baseline.md  04-early-evaluation.md  05-makefile-dev-loop.md  06-ci-cd-phase0.md
(+132 files in other folders)
